Atualiza lista de endereços

--- a/lista.html
+++ b/lista.html
@@ -4,15 +4,43 @@
 <meta charset="UTF-8">
 <title>Endereços</title>
 <style>
-body { font-family: Arial; padding: 20px; }
-li { margin-bottom: 12px; }
-a { text-decoration: none; color: #0066cc; font-size: 18px; }
+body {
+    font-family: Arial, sans-serif;
+    padding: 16px;
+}
+
+h1 {
+    font-size: 28px;
+}
+
+ul {
+    padding-left: 0;
+}
+
+li {
+    list-style: none;
+    margin-bottom: 16px;
+}
+
+a {
+    display: block;
+    font-size: 22px;      /* 🔥 AQUI aumenta a fonte */
+    padding: 14px 16px;   /* 🔥 Área grande para o dedo */
+    color: #0066cc;
+    background: #f4f4f4;
+    border-radius: 10px;
+}
+
+a:active {
+    background: #e0e0e0;
+}
 </style>
+
 </head>
 <body>
 <h1>Lista de Endereços</h1>
 <ul>
-<li><a href="https://www.google.com/maps/dir/?api=1&destination=Rua%20Afonso%20Pena%2C%20500%20%E2%80%93%20S%C3%A3o%20Jos%C3%A9%20dos%20Pinhais%20%E2%80%93%20PR">João Silva</a></li><li><a href="https://www.google.com/maps/dir/?api=1&destination=Av.%20Brasil%2C%201200%20%E2%80%93%20Centro%20%E2%80%93%20Curitiba%20%E2%80%93%20PR">Mercado Central</a></li><li><a href="https://www.google.com/maps/dir/?api=1&destination=Shopping%20Palladium%2C%20Curitiba%20-%20PR">Shopping Palladium</a></li><li><a href="https://www.google.com/maps/dir/?api=1&destination=Rua%20das%20cam%C3%A9lias%2C%2035%20%E2%80%93%20Centro%20%E2%80%93%20Pato%20Branco%20%E2%80%93%20PR">Tia Mary</a></li><li><a href="https://www.google.com/maps/dir/?api=1&destination=Lamenha%20Lins%2C%20Curitiba%20-%20PR">Vick</a></li>
+<li><a href="https://www.google.com/maps/dir/?api=1&destination=Av.%20Brasil%2C%201200%20%E2%80%93%20Centro%20%E2%80%93%20Curitiba%20%E2%80%93%20PR">Mercado Central</a></li><li><a href="https://www.google.com/maps/dir/?api=1&destination=Shopping%20Palladium%2C%20Curitiba%20-%20PR">Shopping Palladium</a></li><li><a href="https://www.google.com/maps/dir/?api=1&destination=Rua%20das%20cam%C3%A9lias%2C%2035%20%E2%80%93%20Centro%20%E2%80%93%20Pato%20Branco%20%E2%80%93%20PR">Tia Mary</a></li><li><a href="https://www.google.com/maps/dir/?api=1&destination=Lamenha%20Lins%2C%20Curitiba%20-%20PR">Vick</a></li>
 </ul>
 </body>
 </html>
