--- a/lista.html
+++ b/lista.html
@@ -10,7 +10,7 @@ body {
 }
 
 h1 {
-    font-size: 28px;
+    font-size: 7%;
 }
 
 ul {
@@ -40,7 +40,7 @@ a:active {
 <body>
 <h1>Lista de Endereços</h1>
 <ul>
-<li><a href="https://www.google.com/maps/dir/?api=1&destination=Av.%20Brasil%2C%201200%20%E2%80%93%20Centro%20%E2%80%93%20Curitiba%20%E2%80%93%20PR">Mercado Central</a></li><li><a href="https://www.google.com/maps/dir/?api=1&destination=Shopping%20Palladium%2C%20Curitiba%20-%20PR">Shopping Palladium</a></li><li><a href="https://www.google.com/maps/dir/?api=1&destination=Rua%20das%20cam%C3%A9lias%2C%2035%20%E2%80%93%20Centro%20%E2%80%93%20Pato%20Branco%20%E2%80%93%20PR">Tia Mary</a></li><li><a href="https://www.google.com/maps/dir/?api=1&destination=Lamenha%20Lins%2C%20Curitiba%20-%20PR">Vick</a></li>
+<li><a href="https://www.google.com/maps/dir/?api=1&destination=Contenda%20-PR">Contenda</a></li><li><a href="https://www.google.com/maps/dir/?api=1&destination=Av.%20Brasil%2C%201200%20%E2%80%93%20Centro%20%E2%80%93%20Curitiba%20%E2%80%93%20PR">Mercado Central</a></li><li><a href="https://www.google.com/maps/dir/?api=1&destination=Shopping%20Palladium%2C%20Curitiba%20-%20PR">Shopping Palladium</a></li><li><a href="https://www.google.com/maps/dir/?api=1&destination=Rua%20das%20cam%C3%A9lias%2C%2035%20%E2%80%93%20Centro%20%E2%80%93%20Pato%20Branco%20%E2%80%93%20PR">Tia Mary</a></li><li><a href="https://www.google.com/maps/dir/?api=1&destination=Lamenha%20Lins%2C%20Curitiba%20-%20PR">Vick</a></li>
 </ul>
 </body>
 </html>
